@@ -1,0 +1,9 @@
+#define ESC "\033"
+#define CSI "["
+
+#define COLOR_TER "m"
+#define COLOR_RESET "0"
+#define RED "31"
+#define GREEN "32"
+#define BLUE "33"
+#define BOLD ";1"
